readability fixes

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     color: #333;
     background: #f5f5f5;
     font-size: 18px; /* Increased font size for readability */
+    margin: 0 auto;
 }
 
 /* Header */
@@ -145,8 +146,8 @@ main {
 }
 
 .intro-text p {
-    font-size: 1.2rem; /* Increased font size */
-    font-weight: 400;
+    font-size: 1.1rem; /* Increased font size */
+    /* font-weight: 400; */
     color: #1a1a1a; /* better for reading */
     line-height: 1.5; /* More spacing between lines */
     text-align: justify; /* Justify the text */
@@ -291,7 +292,7 @@ footer {
 
 .publication-list {
     display: flex;
-    font-weight: 300;
+    /* font-weight: 300; */
     flex-direction: column;
     align-items: flex-start; /* Align items to the left */
     margin-left: 2rem; /* Increase left margin */
@@ -311,7 +312,7 @@ footer {
 }
 
 .publication-item p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     line-height: 1.6;
     margin-bottom: 0.5rem; /* Margin to create space for the button */
 }
